# cargo-ori

./: Cargo.toml
android/: .gitignore  .project  build.gradle  extract.sh  settings.gradle  shell.nix  update.sh
src/: apk.rs  classes.dex  debug.pem  main.rs
