[package]
name = "cargo-ori"
version = "0.1.0"
edition = "2021"

[dependencies]
android-sdkmanager-rs = "0.7"
apk = "0.4"
cargo_metadata = "0.18"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
owo-colors = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
